Added --add-exports to CATALINA_OPTS, because it seems from Java 17 it is required to specify when running: https://stackoverflow.com/a/42541096/1003113