@@ -232,14 +232,12 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>11</source>
-                    <target>11</target>
+                    <source>17</source>
+                    <target>17</target>
                     <!-- ignore warnings about internal Java APIs which we use for WebIDCertGen -->
                     <compilerArgs>
                         <arg>-XDignore.symbol.file</arg>
                         <arg>--add-exports</arg>
-                        <arg>java.base/sun.security.tools.keytool=ALL-UNNAMED</arg>
-                        <arg>--add-opens</arg>
                         <arg>java.base/sun.security.tools.keytool=ALL-UNNAMED</arg>
                     </compilerArgs>
                     <fork>true</fork>
